; ModuleID = '/home/carl/AnghaBench/vlc/src/input/extr_es_out.c_EsOutProgramGetMetaName.c'
source_filename = "/home/carl/AnghaBench/vlc/src/input/extr_es_out.c_EsOutProgramGetMetaName.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32, i64 }

@vlc_meta_Title = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [11 x i8] c"%s [%s %d]\00", align 1
@.str.1 = private unnamed_addr constant [8 x i8] c"Program\00", align 1
@.str.2 = private unnamed_addr constant [6 x i8] c"%s %d\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i8* (%struct.TYPE_3__*)* @EsOutProgramGetMetaName to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i8* @EsOutProgramGetMetaName(%struct.TYPE_3__* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca %struct.TYPE_3__*, align 8
  %4 = alloca i8*, align 8
  store %struct.TYPE_3__* %0, %struct.TYPE_3__** %3, align 8
  store i8* null, i8** %4, align 8
  %5 = load %struct.TYPE_3__*, %struct.TYPE_3__** %3, align 8
  %6 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %5, i32 0, i32 1
  %7 = load i64, i64* %6, align 8
  %8 = icmp ne i64 %7, 0
  br i1 %8, label %9, label %34

9:                                                ; preds = %1
  %10 = load %struct.TYPE_3__*, %struct.TYPE_3__** %3, align 8
  %11 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %10, i32 0, i32 1
  %12 = load i64, i64* %11, align 8
  %13 = load i32, i32* @vlc_meta_Title, align 4
  %14 = call i64 @vlc_meta_Get(i64 %12, i32 %13)
  %15 = icmp ne i64 %14, 0
  br i1 %15, label %16, label %34

16:                                               ; preds = %9
  %17 = call i32 @_(i8* getelementptr inbounds ([11 x i8], [11 x i8]* @.str, i64 0, i64 0))
  %18 = sext i32 %17 to i64
  %19 = inttoptr i64 %18 to i8*
  %20 = load %struct.TYPE_3__*, %struct.TYPE_3__** %3, align 8
  %21 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %20, i32 0, i32 1
  %22 = load i64, i64* %21, align 8
  %23 = load i32, i32* @vlc_meta_Title, align 4
  %24 = call i64 @vlc_meta_Get(i64 %22, i32 %23)
  %25 = trunc i64 %24 to i32
  %26 = call i32 @_(i8* getelementptr inbounds ([8 x i8], [8 x i8]* @.str.1, i64 0, i64 0))
  %27 = load %struct.TYPE_3__*, %struct.TYPE_3__** %3, align 8
  %28 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %27, i32 0, i32 0
  %29 = load i32, i32* %28, align 8
  %30 = call i32 (i8**, i8*, i32, i32, ...) @asprintf(i8** %4, i8* %19, i32 %25, i32 %26, i32 %29)
  %31 = icmp eq i32 %30, -1
  br i1 %31, label %32, label %33

32:                                               ; preds = %16
  store i8* null, i8** %2, align 8
  br label %45

33:                                               ; preds = %16
  br label %43

34:                                               ; preds = %9, %1
  %35 = call i32 @_(i8* getelementptr inbounds ([8 x i8], [8 x i8]* @.str.1, i64 0, i64 0))
  %36 = load %struct.TYPE_3__*, %struct.TYPE_3__** %3, align 8
  %37 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %36, i32 0, i32 0
  %38 = load i32, i32* %37, align 8
  %39 = call i32 (i8**, i8*, i32, i32, ...) @asprintf(i8** %4, i8* getelementptr inbounds ([6 x i8], [6 x i8]* @.str.2, i64 0, i64 0), i32 %35, i32 %38)
  %40 = icmp eq i32 %39, -1
  br i1 %40, label %41, label %42

41:                                               ; preds = %34
  store i8* null, i8** %2, align 8
  br label %45

42:                                               ; preds = %34
  br label %43

43:                                               ; preds = %42, %33
  %44 = load i8*, i8** %4, align 8
  store i8* %44, i8** %2, align 8
  br label %45

45:                                               ; preds = %43, %41, %32
  %46 = load i8*, i8** %2, align 8
  ret i8* %46
}

declare dso_local i64 @vlc_meta_Get(i64, i32) #1

declare dso_local i32 @asprintf(i8**, i8*, i32, i32, ...) #1

declare dso_local i32 @_(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
